<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <EditText
        android:id="@+id/nombreYApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/txtView_Name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/presupuesto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Presupuesto"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreYApellidos" />

    <TextView
        android:id="@+id/destino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/destino"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/presupuesto" />

    <RadioGroup
        android:id="@+id/opcionViaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destino"
        android:checkedButton="@id/opcion_peninsula">

        <RadioButton
            android:id="@+id/opcion_peninsula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion_peninsula"
            android:tag="600"/>

        <RadioButton
            android:id="@+id/opcion_islas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion_islas"
            android:tag="900"/>

        <RadioButton
            android:id="@+id/opcion_interior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_interior"
            android:tag="520"/>
    </RadioGroup>

    <Switch
        android:id="@+id/switch_iva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IVA"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcionViaje" />

    <Button
        android:id="@+id/boton_mostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_iva" />

    <TextView
        android:id="@+id/precio_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio_final"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_mostrar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        app:layout_constraintTop_toBottomOf="@+id/precio_final"
        tools:srcCompat="@drawable/peninsular" />


</androidx.constraintlayout.widget.ConstraintLayout>